--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,16 +4,16 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_oneshoplauchericon"
-        android:label="OneBigShop"
-        android:roundIcon="@drawable/ic_oneshoplauchericon"
+        android:icon="@drawable/ic_onebigshopasset_1xhdpi"
+        android:label="@string/app_name"
+        android:roundIcon="@drawable/ic_onebigshopasset_1xhdpi"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".DashBoardActivity"></activity>
         <activity android:name=".EditAddActivity" />
         <activity
             android:name=".DealDisplayActivity"
-            android:label="@string/deals_header">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
